feat: Latest file updates

--- a/app/views/questions.templ
+++ b/app/views/questions.templ
@@ -47,7 +47,7 @@ templ Questions(props QuestionsProps) {
 							<label
 								for="question_title"
 								class="form-label"
-							>Question:</label>
+							>Title:</label>
 							<input
 								type="text"
 								class="form-control"
