--- a/app/views/question.templ
+++ b/app/views/question.templ
@@ -1,4 +1,67 @@
 package views
 
-templ SingleQuestion() {
+import "github.com/Serares/curly-octo-enigma/domain/repo/dto"
+import "fmt"
+
+type SingleQuestionProps struct {
+	Question dto.QuestionDTO
+	Answers  []dto.AnswerDTO
+}
+
+templ AnswersSection(props SingleQuestionProps) {
+	for _, ans := range props.Answers {
+		<div class="card-body" id="answers">
+			<!-- Answers will be loaded here -->
+			<div class="answer">
+				<p>Answer 1: This is the content of the first answer.</p>
+				if ans.IsAuthor {
+					<button
+						hx-delete={ fmt.Sprintf("/answers/%s", ans.Id) }
+					>
+						Delete answer
+					</button>
+				}
+			</div>
+		</div>
+	}
+}
+
+templ SingleQuestion(props SingleQuestionProps) {
+	<!DOCTYPE html>
+	<html lang="en">
+		<head>
+			<meta charset="UTF-8"/>
+			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+			<title>Question Page</title>
+			<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet"/>
+			<script src="https://unpkg.com/htmx.org@1.3.3"></script>
+		</head>
+		<body>
+			<div class="container mt-5">
+				<div class="row">
+					<div class="col-md-12">
+						<div class="card">
+							<div class="card-header">
+								<h2 id="question-title">Question Title</h2>
+							</div>
+							<div class="card-body">
+								<p id="question-content">This is the content of the question. It provides detailed information about the question.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="row mt-4">
+					<div class="col-md-12">
+						<div class="card">
+							<div class="card-header">
+								<h3>Answers</h3>
+							</div>
+							@AnswersSection(props)
+						</div>
+					</div>
+				</div>
+			</div>
+			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+		</body>
+	</html>
 }
